<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:title="@string/highscores">
        <menu>
            <item
                android:id="@+id/nav_remote_highscores"
                android:icon="@drawable/ic_nav_high_scores"
                android:title="@string/remote_high_scores"/>
            <item
                android:id="@+id/nav_highscores"
                android:icon="@drawable/ic_nav_high_scores"
                android:title="@string/local_high_scores"/>
        </menu>
    </item>

    <item android:title="@string/codes">
        <menu>
            <item
                android:id="@+id/nav_binary"
                android:icon="@drawable/ic_nav_binary"
                android:title="@string/binary"/>
            <item
                android:id="@+id/nav_hexadecimal"
                android:icon="@drawable/ic_nav_hexadecimal"
                android:title="@string/hexadecimal"/>
            <item
                android:id="@+id/nav_sign_and_magnitude"
                android:icon="@drawable/ic_nav_sign_and_magnitude"
                android:title="@string/sign_and_magnitude"/>
            <item
                android:id="@+id/nav_twoscomplement"
                android:icon="@drawable/ic_nav_twos_complement"
                android:title="@string/twoscomplement"/>
            <item
                android:id="@+id/nav_floating_point"
                android:icon="@drawable/ic_nav_floating_point"
                android:title="@string/floating_point"/>
        </menu>
    </item>

    <item android:title="@string/digital_systems">
        <menu>
            <item
                android:id="@+id/nav_logic_gate"
                android:icon="@drawable/ic_nav_logic_gate"
                android:title="@string/logic_gate"/>
            <item
                android:id="@+id/nav_logic_operation"
                android:icon="@drawable/ic_nav_logic_operation"
                android:title="@string/logic_operation"/>
        </menu>
    </item>

    <item android:title="@string/networks">
        <menu>
            <item
                android:id="@+id/nav_network_address"
                android:icon="@drawable/ic_nav_network_address"
                android:title="@string/network_address"/>
            <item
                android:id="@+id/nav_cidr"
                android:icon="@drawable/ic_nav_cidr"
                android:title="@string/cidr"/>
            <item
                android:id="@+id/nav_host_count"
                android:icon="@drawable/ic_nav_host_count"
                android:title="@string/host_count"/>
            <item
                android:id="@+id/nav_network_mask"
                android:icon="@drawable/ic_nav_network_mask"
                android:title="@string/network_mask"/>
            <item
                android:id="@+id/nav_network_layer"
                android:icon="@drawable/ic_nav_network_layer"
                android:title="@string/network_layer"/>
        </menu>
    </item>

</menu>
